hot fix. overlap tab active not on paper.

--- a/Assets/css/index.css
+++ b/Assets/css/index.css
@@ -2340,7 +2340,7 @@ button:disabled.secondary, .input-space
 .overlap .tabs li.selected, .overlap .tabs li.is-active, .overlap .tabs .tabs-title.selected, .overlap .tabs .tabs-title.is-active {
   margin-bottom: -1px;
   padding-bottom: 3px;
-  background: #bfbfbf;
+  background: #fff;
   border-color: gray;
   z-index: 1000;
   vertical-align: bottom;
